    with no optical drive (LP: #1182489)
  * Added missing plugin files to po/POTFILES.in so their strings are
    translatable (LP: #1183271)

  [ Brendan Donegan ]
  * jobs/optical.txt.in - Added VERIFICATION section for cdrom-write job so that
    the Qt UI doesn't barf when it finds there is no such section (LP: #1185759)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Mon, 03 Jun 2013 16:03:53 +0100

checkbox (0.16.2) saucy; urgency=low
  * qt/frontend/treemodel.cpp: Deselect a parent node only if all of its
    child nodes are actually unselected rather than partially selected as
    before. (LP: #1180342)

  [ Alberto Milone ]
  * scripts/graphics_stress_test, scripts/rotation_test: make sure to
    always reset the "screen" variable. Somehow the NVIDIA driver manages
    to make it unusable after the first time. (LP: #1172667)

  [ Brendan Donegan ]
  * checkbox/parsers/submission.py - publish kernel-release information to
    interested parties.

  [ Daniel Manrique ]
  * Ensured that button strings from the "continue" dialog are translatable
    (LP: #1176695) 
  
  [ Jeff Lane ]
  * checkbox/parsers/cpuinfo.py - split on first instance of ':' in cpuinfo
    output lines to avoid splitting into more than 2 items. Also fixed a pep8
    issue discovered while working on this. (LP: #1180496)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Tue, 07 May 2013 19:21:05 +0100

checkbox (0.16.1) saucy; urgency=low

  [ Jeff Lane ]
  * scripts/cpu_offlining: Modified script to no longer offline cpu0 to resolve
    a bug on ARM. Modified output so most of it is redirected to stderr for
    fail cases, we don't need that much for success cases. (LP: #1078897) 
  * jobs/mediacard.txt.in: Modified test instructions to be less confusing
    (LP: #970857)
  * scripts/cpu_topology: define the cpuinfo nested dicts on creation rather
    than define elements during parsing of /proc/cpuinfo (LP: #1111878)