@@ -14,6 +14,12 @@ checkbox (0.16.3) saucy; urgency=low
   [ Brendan Donegan ]
   * jobs/optical.txt.in - Added VERIFICATION section for cdrom-write job so that
     the Qt UI doesn't barf when it finds there is no such section (LP: #1185759)
+  * qt/frontend/treemodel.cpp: Deselect a parent node only if all of its
+    child nodes are actually unselected rather than partially selected as
+    before. (LP: #1180342)
+  * qt/frontend/qtfront.cpp, qtfront.h, checkbox_qt/qt_interface.py: Select
+    appropriate radio button in showTest if the test already has a result set
+    rather than just defaulting to skip always (LP: #1181952)
 
  -- Brendan Donegan <brendan.donegan@canonical.com>  Mon, 03 Jun 2013 16:03:53 +0100
 
